<resources>
    <string name="app_name">ThirdPract</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_google">Go to Google</string>
    <string name="send_to_infoactivity">Send to infoactivity</string>
    <string name="enter_value">Enter value</string>
    <string name="send_text">Send text</string>
    <string name="image_BN">TODO</string>
    <string name="back">Назад</string>
    <string name="infAboutOwl">Информация о совах</string>
    <string name="BN">Бородатая неясыть</string>
    <string name="hint_optionOfName">Введите возможное имя совы</string>
    <string name="text1">Здесь будет имя совы</string>
    <string name="inf">Информация</string>
    <string name="aboutOwl">Это сова по имени Тучка! Борода́тая нея́сыть — вид хищных птиц из рода неясытей и семейства совиных. Крупная (размах крыльев до полутора метров) птица. Русское название получила за чёрное пятно под клювом, похожее на бороду.</string>
    <string name="interPhoneNumber">Введите номер телефона</string>
    <string name="input">Вход</string>
    <string name="interName">Введите имя</string>
    <string name="hereBeenName">Здесь будет имя</string>
    <string name="excelent">Супер</string>
    <string name="main_text">Pricol</string>
</resources>