<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".HelloFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <ImageView
        android:id="@+id/flower_high_left"
        android:layout_width="103dp"
        android:layout_height="96dp"

        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/owl"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/interName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="294dp"
        android:layout_below="@+id/flower_high_left"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="253dp"
        android:layout_height="48dp"

        android:layout_below="@+id/editTextTextPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/interPhoneNumber"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


    <Button
        android:id="@+id/button_gotovo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/buttonInput"
        android:text="@string/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        android:layout_below="@+id/editTextPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_gotovo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/hereBeenName" />


</RelativeLayout>