<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/flower_catalog_2"
        android:layout_width="200dp"
        android:layout_height="189dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/cgfctctc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5_for_name" />

    <Button
        android:id="@+id/button_gotovo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/buttonInput"
        android:text="@string/excelent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5_for_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:hint="@string/hereBeenName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="203dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutOwl"
        android:textAlignment="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/button_gotovo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flower_catalog_2"
        app:layout_constraintVertical_bias="0.401" />
</androidx.constraintlayout.widget.ConstraintLayout>